// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPollExtraOptionInput renders correctly when untouched 1`] = `
.c0 {
  margin-bottom: 3px;
}

.c0 input {
  height: 47px;
}

<div
  class="c0 input-group"
>
  <input
    class="form-control"
    id="field"
    name="field"
    type="text"
  />
  <div
    class="input-group-append"
  >
    <button
      class="btn btn-outline-danger"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-close fa-2x"
      />
    </button>
  </div>
</div>
`;

exports[`AddPollExtraOptionInput renders correctly when valid 1`] = `
.c0 {
  margin-bottom: 3px;
}

.c0 input {
  height: 47px;
}

<div
  class="c0 input-group"
>
  <input
    class="is-valid form-control"
    id="field"
    name="field"
    type="text"
  />
  <div
    class="input-group-append"
  >
    <button
      class="btn btn-outline-danger"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-close fa-2x"
      />
    </button>
  </div>
</div>
`;
